--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ header hr {
   padding-bottom: 150px;
   background-color: #6f5c88;
 }
+#second-card {
+  margin-top: 50px;
+}
 #footer {
   font-size: 18px;
   margin-left: 80px;
