Update the index.html, CSS and image files

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ header hr {
 #about {
   padding-bottom: 100px;
 }
+.github {
+  height: 80px;
+  width: 80px;
+}
 .card-title {
   color: #fff;
 }
