--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ header hr {
 #second-card {
   margin-top: 50px;
 }
+
+#third-card {
+  margin-top: 50px;
+}
+
 #footer {
   font-size: 18px;
   margin-left: 80px;
