updating html, css

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,9 @@ header hr {
 #third-card {
   margin-top: 50px;
 }
-
+#fourth-card {
+  margin-top: 50px;
+}
 footer {
   background-color: #9b9595;
 }
