--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ footer {
     #projects h2 {
       font-size: 1.7rem;
     }
+    
 }
 
 /* ———– iPhone 4 and 4S Galaxy S5 ———– /
@@ -374,4 +375,122 @@ and (-webkit-min-device-pixel-ratio: 2) {
   .social {
     margin-left: 50px;
   }
+  
 }
+@media only screen 
+  and (min-device-width: 384px) 
+  and (max-device-width: 688px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    a img {
+      height: 60px;
+      width: 60px;
+      margin-left: -5px;
+    }
+    header img {
+      margin-right: -10px;
+      height: 200px;
+      width: 200px;
+      margin-top: 90px;
+    } 
+    header h1 {
+      margin-top: 4px;
+    }
+    header h2 {
+      font-size: 1.2rem;
+      margin-left: -10px;
+    }
+    .card-deck .card {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media only screen 
+  and (min-device-width: 384px) 
+  and (max-device-width: 728px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    a img {
+      height: 60px;
+      width: 60px;
+      margin-left: -5px;
+    }
+    header img {
+      margin-right: -10px;
+      height: 200px;
+      width: 200px;
+      margin-top: 90px;
+    } 
+    header h1 {
+      margin-top: 4px;
+    }
+    header h2 {
+      font-size: 1.2rem;
+      margin-left: -10px;
+    }
+    .card-deck .card {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media only screen 
+  and (min-device-width: 384px) 
+  and (max-device-width: 787px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    a img {
+      height: 60px;
+      width: 60px;
+      margin-left: -5px;
+    }
+    header img {
+      margin-right: -10px;
+      height: 200px;
+      width: 200px;
+      margin-top: 90px;
+    } 
+    header h1 {
+      margin-top: 1px;
+      font-size: 1.5rem;
+      margin-left: -30px;
+    }
+    header h2 {
+      font-size: 1.2rem;
+      text-align: center;
+    }
+    #about p {
+      font-size: 1.1rem;
+    }
+    .card-deck .card {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media only screen 
+  and (min-device-width: 384px) 
+  and (max-device-width: 838px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    a img {
+      height: 60px;
+      width: 60px;
+      margin-left: -5px;
+    }
+    header img {
+      margin-right: -10px;
+      height: 200px;
+      width: 200px;
+      margin-top: 90px;
+    } 
+    header h1 {
+      margin-top: 1px;
+      font-size: 1.5rem;
+      margin-left: -30px;
+    }
+    header h2 {
+      font-size: 1.2rem;
+      text-align: center;
+    }
+    #about p {
+      font-size: 1.1rem;
+    }
+    .card-deck .card {
+      margin-bottom: 30px;
+    }
+  }
